adl-frontend/src/test/resources/unit/error/semantic/adlRefs/ref4.adl
//#SemanticError GroupId=ADL ErrorId=ADL_NOT_FOUND line=6

composite adlRefs.ref4
{
  contains 
  foo.unknownADL
  <Primitive1>
  as c;
}
